# htmx-demo

./: .gitignore  Cargo.toml  Readme.md  input.css  tailwind.config.js
src/: main.rs
src/components/: customizeLinks.rs  mod.rs  navbar.rs  profile.rs
src/db/: mod.rs  mutations.rs  queries.rs
src/handlers/: links.rs
src/models/: link.rs  mod.rs  platform.rs
style/: output.css
