[package]
name = "htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
html-macro = "0.2.2"
leptos = "0.4.3"
actix-files = { version = "0.6" }
sqlx = { version = "0.7", features = [ "postgres", "runtime-tokio" ] }
dotenv = "0.15.0"
serde = "1.0.171"
uuid = {version = "1.4.0", features = ["v4"]}